--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ h2  {
     #contacts {
         background-color: rgb(221, 216, 216);
         width: 80mm;
-        height: 280px;
+        height: 240px;
         font-weight: bold;
         padding:10px;
         margin: 30px 0;
@@ -103,8 +103,8 @@ section {
 .clock ,
 .mole
  {
-    width: 110px;
-    height: 100px;
+    width: 170px;
+    height: 150px;
     border: rgb(78, 78, 78) solid 3px;
     border-radius: 20%;
     margin-right: 40px;
@@ -133,12 +133,13 @@ section {
     text-decoration: none;
     position: relative;
     bottom: 0px;
-    right: -30px;
+    right: -65px;
 }
 
 .mo {
     max-width: 160px;
     text-decoration: none;
+    margin-left: 80px;
 }
 
 .mo::after {
@@ -147,7 +148,7 @@ section {
     text-decoration: none;
     position: relative;
     bottom: 0px;
-    right: 2px;
+    right: -26px;
 }
 
 .my-code {
@@ -182,4 +183,10 @@ footer {
 }
 .skills > ul  {
     padding-left: 0px;
+}
+
+
+.ul-contacts {
+    
+    line-height: 40px;
 }
